--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -29,7 +29,7 @@
 			<!--提现部分-->
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-			        <label></label>
+			        <label><img class="fubi-icon" src="../images/fubi.png"/></label>
 			        <input id="with_amount" autofocus="autofocus" type="text" class="mui-input-clear" placeholder="请输入提现福币个数">
 			    </div>
 			</form>
