--- a/m_finance.html
+++ b/m_finance.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="mui-content">
 			<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" id="m_finance_sub1.html">最新</a>
+					<a class="mui-control-item mui-active" id="m_finance_sub1.html">最新</a>
 					<a class="mui-control-item" id="m_finance_sub2.html">高收益</a>
 					<a class="mui-control-item" id="m_finance_sub3.html">低风险</a>
 			</div>
