--- a/m_task.html
+++ b/m_task.html
@@ -22,12 +22,14 @@
 		<meta http-equiv="Expires" content="0">
 		<title>体验福利</title>
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
+		<link rel="stylesheet" type="text/css" href="css/m_task.css" />
 	</head>
 
 	<body>
 		<div class="mui-content">
 			<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="m_task_junior.html">新手入门</a>
+					<a class="mui-control-item mui-active" href="m_task_junior.html">新手入门</a>
 					<a class="mui-control-item" href="m_task_middle.html">进阶体验</a>
 					<a class="mui-control-item" href="m_task_senior.html">高手专区</a>
 			</div>
