--- a/m_welfare.html
+++ b/m_welfare.html
@@ -543,6 +543,7 @@
 				var length = recoms.length;
 				for (var i = 0; i < length; i++){
 					recom = recoms[i];
+					console.log(JSON.stringify(recom));
 					if(delay){
 						recom.image = 'images/blank.jpg';
 					}
