--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -92,7 +92,7 @@
         						mui.alert(ret.msg);
         					},
         					error:function(xhr,type,errorThrown){
-								mui.alert(type);
+								mui.toast("请检查网络状况！");
 							}
         				});
                     }
