--- a/account/m_password_reset.html
+++ b/account/m_password_reset.html
@@ -91,7 +91,7 @@
 						});
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			});
@@ -162,7 +162,7 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			};
