--- a/account/m_account_change_zhifubao.html
+++ b/account/m_account_change_zhifubao.html
@@ -122,7 +122,7 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			};
