--- a/account/m_register.html
+++ b/account/m_register.html
@@ -103,7 +103,7 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			});
@@ -174,7 +174,7 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			};
