--- a/account/m_strategy.html
+++ b/account/m_strategy.html
@@ -96,13 +96,16 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 				mui(".open_window").on('tap', 'a', function(e) {
 					console.log('dsdsdd');
 					var sid = this.getAttribute('data_id');
 					var htitle = this.innerText;
+					if (!sid){
+						return;
+					}
 					mui.openWindow({
 			            url: "m_detail_press.html",
 			            id: "m_detail_press.html",
