--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -114,7 +114,7 @@
 						
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 				window.scrollTo(0, 0);
