--- a/html/m_detail_information.html
+++ b/html/m_detail_information.html
@@ -39,7 +39,7 @@
 				},
 				success:function(ret){
 					if(ret.code!=0){
-						mui.alert("请检查网络连接");
+						mui.alert("后台连接错误，请联系客服");
 					}
 					else{
 						var info = ret.info;
@@ -48,7 +48,7 @@
 					}
 				},
 				error:function(xhr,type,errorThrown){
-					mui.alert(type);
+					mui.toast("请检查网络状况！");
 				}
 			});
 	    });
