--- a/html/m_detail_task.html
+++ b/html/m_detail_task.html
@@ -122,7 +122,7 @@
 						
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 				window.scrollTo(0, 0);
@@ -175,7 +175,7 @@
 										}
 									},
 									error:function(xhr,type,errorThrown){
-										mui.alert(type);
+										mui.toast("请检查网络状况！");
 									}
 								});
 		                    }
@@ -212,7 +212,7 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			});
