--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -95,7 +95,7 @@
 						},
 						success:function(ret){
 							if(ret.code!=0){
-								mui.alert("请检查网络连接");
+								mui.alert("后台连接错误，请联系客服");
 							}
 							else{
 								ismobile = ret.ismobile;
@@ -114,7 +114,7 @@
 							
 						},
 						error:function(xhr,type,errorThrown){
-							mui.alert(type);
+							mui.toast("请检查网络状况！");
 						}
 					});
 			  	}
@@ -126,7 +126,7 @@
 						dataType:"json",
 						success:function(ret){
 							if(ret.code!=0){
-								mui.alert("请检查网络连接");
+								mui.alert("后台连接错误，请联系客服");
 							}
 							else{
 								var strategy = ret.strategy;
@@ -142,7 +142,7 @@
 							
 						},
 						error:function(xhr,type,errorThrown){
-							mui.alert(type);
+							mui.toast("请检查网络状况！");
 						}
 					});
 			  	}
@@ -208,7 +208,7 @@
 		    				}
 		    			},
 		    			error:function(xhr,type,errorThrown){
-							mui.alert(type);
+							mui.toast("请检查网络状况！");
 						}
 		    		});
 				}
