--- a/m_account_index.html
+++ b/m_account_index.html
@@ -213,7 +213,7 @@
 	    				}
 					},
 					error:function(xhr,type,errorThrown){
-						mui.alert(type);
+						mui.toast("请检查网络状况！");
 					}
 				});
 			}
