--- a/m_finance_sub1.html
+++ b/m_finance_sub1.html
@@ -51,7 +51,7 @@
 					},
 					dataType:'json',//服务器返回json格式数据
 					type:'get',//HTTP请求类型
-					timeout:10000,//超时时间设置为10秒；
+					timeout:3000,//超时时间设置为10秒；
 //							headers:{'Content-Type':'application/json'},
 					success:function(data){
 						if (!data.length){
@@ -75,7 +75,10 @@
 						}
 					},
 					error:function(xhr,type,errorThrown){
-						alert(type);
+						if(n>0){
+							mui.toast("请检查网络状况！");
+						}
+						mui('#pullrefresh').pullRefresh().endPullupToRefresh(false);
 					}
 				});
 			}
