--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -20,7 +20,7 @@
 					<img id="userimg" src="../images/user.png" alt="用户头像" />
 					<div class="text">
 						<p><number id="mobile"></number><br />
-						<span>账户余额：<strong>&nbsp;<number id="balance"></number>&nbsp;</strong>元</p>
+						<span>剩余福币：<strong>&nbsp;<number id="balance"></number>&nbsp;</strong>个</p>
 					</div>
 				    <button id="Btn" type="button" class="mui-btn mui-btn-warning">提&nbsp;现</button>
 				</div>
