--- a/m_welfare.html
+++ b/m_welfare.html
@@ -136,7 +136,7 @@
 		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/feed.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/html5sql.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/app.js"></script>
+		<!--<script type="text/javascript" charset="UTF-8" src="js/app.js"></script>-->
 		<script type="text/javascript" charset="UTF-8" src="js/news.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/template.js"></script>
 		<script>
@@ -532,7 +532,7 @@
 				}
 			}
 			function add_doms_recom(recoms, delay){
-//				var recoms = mui.extend({}, recoms); 	
+				var recoms = mui.extend({}, recoms); 	//jzy
 				if (!recoms || recoms.length === 0){
 					return;
 				}
