--- a/m_index.html
+++ b/m_index.html
@@ -57,7 +57,7 @@
 			</a>
 		</nav>
 	</body>
-	<script src="../js/mui.js"></script>
+	<script src="js/mui.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
