--- a/m_welfare.html
+++ b/m_welfare.html
@@ -147,6 +147,7 @@
 			var tempview = null;
 			 //初始化下拉刷新模块  
 			mui.init({
+				preloadLimit: 20,
 				gestureConfig:{
 					longtap: true,
 				},
