--- a/template.html
+++ b/template.html
@@ -148,7 +148,7 @@
 			share_msg.title = titleElem.innerHTML;
 			share_msg.content = "想想这里填什么  @礼沂";
 			window.share.open(share_msg,function(ret){
-				console.log(ret);
+//				console.log(ret);
 			});
 		});
 		
