--- a/m_finance.html
+++ b/m_finance.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 	<head lang="en">
 		<meta charset="UTF-8">
-		<title>理财福利</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
 		<link rel="stylesheet" type="text/css" href="css/m_finance.css" />
@@ -11,73 +10,144 @@
 
 	<body>
 		<div class="mui-content">
-			<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item mui-active" id="m_finance_sub1.html">最新</a>
-					<a class="mui-control-item" id="m_finance_sub2.html">高收益</a>
-					<a class="mui-control-item" id="m_finance_sub3.html">低风险</a>
+			<!--选项卡部分-->
+			<div id="finance_slider" class="mui-slider mui-fullscreen">
+				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<a class="mui-control-item" href="#item1">最新</a>
+					<a class="mui-control-item" href="#item2">高收益</a>
+					<a class="mui-control-item" href="#item3">低风险</a>
+					<!--<a class="mui-control-item" href="#item5">优惠券</a>-->
+				</div>
+				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
+				<div class="mui-slider-group">
+					<div id="item1" class="mui-slider-item mui-control-content mui-active" value="1">
+						<div id="scroll1" class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div id="item2" class="mui-slider-item mui-control-content" value="2">
+						<div id="scroll1" class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div id="item3" class="mui-slider-item mui-control-content" value="3">
+						<div id="scroll1" class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+								</ul>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
 			</div>
+
 		</div>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
-		<script src="js/template.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.material.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/template.js"></script>
 		<script>
+			var table = document.body.querySelector('.mui-table-view');
+			var get_finance_url = "http://test.wafuli.cn/finance_json";
+			var host = "http://test.wafuli.cn";
+			var count = 0;
+			var template = null;
 			mui.init();
-			var subpages = ['m_finance_sub1.html','m_finance_sub2.html','m_finance_sub3.html'];
-			var subpage_style = {
-				top: '40px',
-				bottom: '0px',
-				hardwareAccelerated:true,
-				dock:"top",
-			};
-		
-			var aniShow = {};
-			var self = null;
-			//创建子页面，首个选项卡页面显示，其它均隐藏；
-			mui.plusReady(function() {
-				setTimeout(function(){
-					preload();
-				},1000);
-				self = plus.webview.currentWebview();
+			mui.plusReady(function(){
+				template = getTemplate('finance','template.html',"html/m_detail_finance.html");
 			});
-			function preload(){
-				for(var i = 0; i < 3; i++) {
-					var temp = {};
-					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if(i > 0) {
-						sub.hide();
-					} else {
-						temp[subpages[i]] = "true";
-						mui.extend(aniShow, temp);
-					}
-					self.append(sub);
+			//阻尼系数
+			var deceleration = mui.os.ios?0.003:0.0009;
+			mui('.mui-scroll-wrapper').scroll({
+				bounce: true,
+				indicators: true, //是否显示滚动条
+				deceleration:deceleration
+			});
+			mui.ready(function() {
+				//循环初始化所有上拉加载
+				mui.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
+					var count = 0;
+					mui(pullRefreshEl).pullToRefresh({
+						up: {
+							auto:true,
+							callback: function() {
+								var self = this;
+								var ul = self.element.querySelector('.mui-table-view');
+								get_finance_list(this,ul,count++,index);
+							//		ul.appendChild(createFragment(ul, index, 5));
+								//	self.endPullUpToRefresh(true);
+							}
+						}
+					});
+				});
+
+				function get_finance_list(obj,ul,n,index){
+					mui.ajax(get_finance_url,{
+						data:{
+							count:n,
+							type:index,
+						},
+						dataType:'json',//服务器返回json格式数据
+						type:'get',//HTTP请求类型
+						timeout:10000,//超时时间设置为10秒；
+//							headers:{'Content-Type':'application/json'},
+						success:function(data){
+							if (!data.length){
+								obj.endPullUpToRefresh(true);
+							}
+							else {
+								obj.endPullUpToRefresh(false);//参数为true代表没有更多数据了。
+								var table = document.body.querySelector('.mui-table-view');
+//									var cells = document.body.querySelectorAll('.mui-table-view-cell');
+								for (var i in data) {
+									var wel = data[i];
+									var li = document.createElement('li');
+									li.className = 'mui-table-view-cell';
+									li.innerHTML = '<a class="clearfix" data_id="' + wel.id + '" href="' + wel.url + '"><div class="title"><strong>'+ wel.title +
+										'</strong><span>官网利息：<font>' + wel.interest + '</font></span></div>'+
+										'<div class="container clearfix">'+
+										'<div><img src="' + host + wel.picurl + '" /><span>' + wel.category + '</span>'+
+										'</div><div class="inc2"><p>补贴收益：<number>+' + wel.benefit +
+										'</number></p><p>起投金额：' + wel.amount +
+										'</p><p>标期长度：' + wel.time + '</p></div></div></a>';
+									ul.appendChild(li);
+								}
+							}
+						},
+						error:function(xhr,type,errorThrown){
+							alert(type);
+						}
+					});
 				}
-				flag = getTemplate('finance','template.html',"html/m_detail_finance.html");
-			}
-			//当前激活选项
-			var activeTab = subpages[0];
-			var title = document.getElementById("title");
-			//选项卡点击事件
-			mui('.mui-slider-indicator').on('tap', 'a', function(e) {
-				var targetTab = this.id;
-				if(targetTab == activeTab) {
-					return;
+			});
+			var detailMainWebview = null; //详情页面父webview
+			var detailWebview = null; //详情页面子webview
+			function open_welfare_detail(id,title,img) {
+				if (!template){
+					mui.alert("页面还在加载，稍等~");
 				}
-				//更换标题
-	//			title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
-				//显示目标选项卡
-				//若为iOS平台或非首次显示，则直接显示
-				if(mui.os.ios || aniShow[targetTab]) {
-					plus.webview.show(targetTab);
-				} else {
-					//否则，使用fade-in动画，且保存变量
-					var temp = {};
-					temp[targetTab] = "true";
-					mui.extend(aniShow, temp);
-					plus.webview.show(targetTab, "fade-in", 300);
-				}
-				//隐藏当前;
-				plus.webview.hide(activeTab);
-				//更改当前活跃的选项卡
-				activeTab = targetTab;
+				detailMainWebview = template.header;
+				detailWebview = template.content;
+				mui.fire(detailMainWebview, 'updateHeader', {
+					title: title
+				});
+				mui.fire(detailWebview, 'display', {
+					id: id,
+					img: img,
+				});
+			};
+			mui('.mui-table-view').on('tap', 'a', function() {
+				var title = this.querySelector('strong').innerText;
+				var img = this.querySelector('img').src;
+				open_welfare_detail(this.getAttribute('data_id'),title,img);
 			});
 		</script>
 	</body>
