--- a/m_welfare.html
+++ b/m_welfare.html
@@ -69,7 +69,7 @@
 		                </li>
 		            	<li>
 		                	<a id="html/m_activity.html">
-		                    	<i class="icon iconfont ic-03"></i>
+		                    	<i class="icon iconfont ic-03">&#xe8f1;</i>
 		                        <span>要赚福币</span>
 		                    </a>
 		                </li>
