--- a/m_account_index.html
+++ b/m_account_index.html
@@ -72,7 +72,7 @@
 					</a>
 				</li>
 
-				<li class="mui-table-view-cell user-msg mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
 					<a class="icon-url" href="account/m_account_welfare.html">
 						<i class="icon iconfont">&#xe651;</i>
 						<p>福利管理</p>
@@ -102,146 +102,75 @@
 
 		</div>
 
-	<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
-	<script type="text/javascript" charset="UTF-8" src="js/UserInfo.js"></script>
-    <script type="text/javascript" charset="utf-8">
-      	mui.init();
-      	var get_userinfo_url = "http://test.wafuli.cn/app/user/";
-      	var self = null;
-      	var tempview = null;
-      	mui.plusReady(function() {
-      		self = plus.webview.currentWebview();
-      		tempview = plus.webview.getWebviewById("temp");
-      		self.addEventListener('show',function(){
-      			if (!UserInfo.has_login()){
-      				tologin();
-      			}
-      			else{
-      				refresh_userinfo();
-      			}
-      		});
-      		window.addEventListener('login-refresh',function(){
-      			var info = UserInfo.userinfo();
-      			display_userinfo(info);
-      		});
-      		window.addEventListener('logoff-refresh',function(){
-      			display_userinfo();
-      		});
-      		function display_userinfo(dict){
-      			if (!dict){
-      				document.getElementById('userimg').src = "images/user.png";
-					document.getElementById('mobile').innerText = "";
-					document.getElementById('scores').innerText = "";
-					document.getElementById('accu_income').innerHTML = "";
-					document.getElementById('balance').innerText = "";
-					document.getElementById('scores').innerText = "";
-      			}
-      			else{
-      				var img = "images/user-0" + dict.userimg + ".png";
-					document.getElementById('userimg').src = img;
-					document.getElementById('mobile').innerText = dict.mobile;
-					document.getElementById('scores').innerText = dict.scores;
-					document.getElementById('accu_income').innerHTML = dict.accu_income;
-					document.getElementById('balance').innerText = dict.balance
-					document.getElementById('scores').innerText = dict.scores;
-      			}
-      		}
-      		mui('.mui-table-view').on('tap', 'a', function(e) {
-      			if (!UserInfo.has_login()){
-      				tologin();
-      			}
-      			else{
-      				var targetTab = this.getAttribute('href');
-      				tempview.loadURL(targetTab);
-      				setTimeout(function(){
-      					tempview.show('pop-in');
-      				},10);
-//    				console.log(tempview.id);
-//					mui.openWindow({
-//			            url: targetTab,
-//			            id: targetTab,
-//			            styles: {
-//			                top: 0,
-//			                bottom: 0,
-//			                hardwareAccelerated:true
-//			            },
-//			            show:{
-//					      autoShow:false,//页面loaded事件发生后自动显示，默认为true
-//					      aniShow: 'slide-in-right'
-//					    },
-//			            waiting: {
-//							autoShow: true,
-//						},
-//			        });
-      			}
-			});
-			document.getElementById("settings").addEventListener("tap",function(e) {
-				if (!UserInfo.has_login()){
-      				tologin();
-      			}
-      			else{
-      				if (!tempview){
-      					tempview = plus.webview.getWebviewById("temp");
-      				}
-      				tempview.loadURL("account/m_account_settings.html");
-      				tempview.addEventListener('loaded',function(){
-      					tempview.show('pop-in');
-      				});
-//					mui.openWindow({
-//			            url: "account/m_account_settings.html",
-//			            id: "account/m_account_settings.html",
-//			            styles: {
-//			                top: 0,
-//			                bottom: 0,
-//			                hardwareAccelerated:true
-//			            },
-//			            show:{
-//					      autoShow:false,//页面loaded事件发生后自动显示，默认为true
-//					      aniShow: 'slide-in-right'
-//					    },
-//			            waiting: {
-//							autoShow: true,
-//						},
-//			        });
-      			}
-			});
-			function tologin(){
-				plus.nativeUI.showWaiting();
-				localStorage.setItem('login-backid',self.id);
-				if (!tempview){
-  					return;
-  				}
-				tempview.loadURL("a_login.html");
-				tempview.addEventListener('loaded',function(){
-					plus.nativeUI.closeWaiting();
-					tempview.show("pop-in",350);
+		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/UserInfo.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			mui.init();
+			var get_userinfo_url = "http://test.wafuli.cn/app/user/";
+			var self = null;
+			var tempview = null;
+			mui.plusReady(function() {
+				self = plus.webview.currentWebview();
+				tempview = plus.webview.getWebviewById("temp");
+				self.addEventListener('show', function() {
+					if(!UserInfo.has_login()) {
+						tologin();
+					} else {
+						refresh_userinfo();
+					}
 				});
-			}
-			function refresh_userinfo(){
-				mui.ajax({
-					type: "post",
-					url: get_userinfo_url,
-					dataType: 'json',
-					data:{
-		    			token:UserInfo.token()
-		    		},
-					success: function(ret) {
-						if(ret.code==0){
-							var info = ret.info;
-							display_userinfo(info);
-							UserInfo.userinfo(info);
-	    				}
-	    				else if(ret.code<0){
-	    					tologin();
-	    					UserInfo.clear();
-					        return;
-	    				}
-	    				else{
-	    					mui.alert(ret.msg);
-	    				}
-					},
-					error:function(xhr,type,errorThrown){
-						mui.toast("请检查网络状况！");
+				window.addEventListener('login-refresh', function() {
+					var info = UserInfo.userinfo();
+					display_userinfo(info);
+				});
+				window.addEventListener('logoff-refresh', function() {
+					display_userinfo();
+				});
+
+				function display_userinfo(dict) {
+					if(!dict) {
+						document.getElementById('userimg').src = "images/user.png";
+						document.getElementById('mobile').innerText = "";
+						document.getElementById('scores').innerText = "";
+						document.getElementById('accu_income').innerHTML = "";
+						document.getElementById('balance').innerText = "";
+						document.getElementById('scores').innerText = "";
+					} else {
+						var img = "images/user-0" + dict.userimg + ".png";
+						document.getElementById('userimg').src = img;
+						document.getElementById('mobile').innerText = dict.mobile;
+						document.getElementById('scores').innerText = dict.scores;
+						document.getElementById('accu_income').innerHTML = dict.accu_income;
+						document.getElementById('balance').innerText = dict.balance
+						document.getElementById('scores').innerText = dict.scores;
+					}
+				}
+				mui('.row-bottom').on('tap', 'a', function(e) {
+					if(!UserInfo.has_login()) {
+						tologin();
+					} else {
+						var targetTab = this.getAttribute('href');
+						tempview.loadURL(targetTab);
+						setTimeout(function() {
+							tempview.show('pop-in');
+						}, 10);
+						//    				console.log(tempview.id);
+						//					mui.openWindow({
+						//			            url: targetTab,
+						//			            id: targetTab,
+						//			            styles: {
+						//			                top: 0,
+						//			                bottom: 0,
+						//			                hardwareAccelerated:true
+						//			            },
+						//			            show:{
+						//					      autoShow:false,//页面loaded事件发生后自动显示，默认为true
+						//					      aniShow: 'slide-in-right'
+						//					    },
+						//			            waiting: {
+						//							autoShow: true,
+						//						},
+						//			        });
 					}
 				});
 				document.getElementById("settings").addEventListener("tap", function(e) {
@@ -277,6 +206,9 @@
 				function tologin() {
 					plus.nativeUI.showWaiting();
 					localStorage.setItem('login-backid', self.id);
+					if(!tempview) {
+						return;
+					}
 					tempview.loadURL("a_login.html");
 					tempview.addEventListener('loaded', function() {
 						plus.nativeUI.closeWaiting();
@@ -299,6 +231,7 @@
 								UserInfo.userinfo(info);
 							} else if(ret.code < 0) {
 								tologin();
+								UserInfo.clear();
 								return;
 							} else {
 								mui.alert(ret.msg);
