--- a/account/m_strategy.html
+++ b/account/m_strategy.html
@@ -34,13 +34,14 @@
 			        <li class="mui-table-view-cell mui-collapse">
 			            <a class="left-icon4 left-icon1 mui-navigate-right" href="#"><i class="icon iconfont ic04">&#xe608;</i>关于我们</a>
 			            <div class="mui-collapse-content">
-			                <a href="{%url 'aboutus_contactus'%}">联系我们</a>
+			                <!--<a href="{%url 'aboutus_contactus'%}">联系我们</a>-->
+			                <a href="m_aboutus_contactus.html">联系我们</a>
 			            </div>
 			            <div class="mui-collapse-content">
-			                <a href="{%url 'aboutus_statement'%}">版权声明</a>
+			                <a href="m_aboutus_statement.html">版权声明</a>
 			            </div>
 			            <div class="mui-collapse-content">
-			                <a href="{%url 'aboutus_cooperation'%}">商务合作</a>
+			                <a href="m_aboutus_cooperation.html">商务合作</a>
 			            </div>
 			        </li>
 			   </ul>
